--- a/src/Pages/ProductsPage/ProductsPage.css
+++ b/src/Pages/ProductsPage/ProductsPage.css
@@ -3,3 +3,15 @@
     justify-content: space-between;
     flex-wrap: wrap;
 }
+.sortAndFiltersBtn {
+    background: none;
+    margin: 0.5rem;
+    font-size: larger;
+    cursor: pointer;
+}
+
+.sortAndFilters {
+    width: auto;
+    position: absolute;
+    background-color: var(--white);
+}
